--- a/Snake/MainWindow.xaml
+++ b/Snake/MainWindow.xaml
@@ -22,13 +22,21 @@
             </Grid.RowDefinitions>
 
             <TextBlock 
-        x:Name="ScorText" 
-        HorizontalAlignment="Center"
-        VerticalAlignment="Center"
-        Text="SCORE 0"
-        FontSize="22"
-        Margin="10"
-    />
+                x:Name="ScoreText" 
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                Text="SCORE: 0"
+                FontSize="22"
+                Margin="10"
+            />
+            <TextBlock 
+                x:Name="TimeText" 
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                Text="TIME: 0"
+                FontSize="22"
+                Margin="10"
+            />  
             <Border x:Name="GridBorder"
             Grid.Row="1"
             BorderBrush="{StaticResource GridLineColor}"
@@ -50,7 +58,7 @@
                     Background="{StaticResource OverlayColor}"
                     Width="{Binding Path=ActualWidth, ElementName=GridBorder}"
                     Height="{Binding Path=ActualHeight, ElementName=GridBorder}"
-                    Margin="{Binding Path=Margi, ElementName=GridBorder}"
+                    Margin="{Binding Path=Margin, ElementName=GridBorder}"
                     RenderOptions.EdgeMode="Aliased">
                 <TextBlock x:Name="OverlayText"
                            Text="Press any key to start"
